--- a/estilo.css
+++ b/estilo.css
@@ -1,8 +1,8 @@
 body{
-    background-color: yellow;
+    background-color:brown;
  
 }
  p{
     text-align: center;
-    color:black;
+    color:white;
 }
