--- a/estilo.css
+++ b/estilo.css
@@ -1,6 +1,8 @@
 body{
     background-color:rgb(88, 30, 30);
- 
+ color:rgb(88, 30, 30);
+ font-size: 30px;
+ text-align: center;
 }
  p{
     text-align: center;
