--- a/estilo.css
+++ b/estilo.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Kanit', sans-serif;
-    background-color:rgb(88, 30, 30);
+    background-color:black;
  color: white;
  font-size: 30px;
  text-align: center;
