--- a/estilo.css
+++ b/estilo.css
@@ -13,6 +13,9 @@ body{
     font-size: 50px;
     color:brown;
 }
-foto1{
-    width: ;
+#foto1{
+    width: 60%;
+}
+#conteudo{
+    display: flex;
 }
